// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIForm will render 1`] = `
<View
  style={
    [
      {
        "flexGrow": 1,
        "minHeight": 667,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "flexDirection": "column",
          "flexGrow": 1,
        },
      ]
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
      testID="snap-ui-renderer__scrollview"
    >
      <View>
        <View
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            color="Default"
            flexDirection="column"
            gap={8}
            justifyContent="flex-start"
            style={
              [
                {
                  "color": "Default",
                  "flexDirection": "column",
                  "gap": 8,
                  "justifyContent": "flex-start",
                },
                {
                  "gap": 16,
                  "margin": 16,
                },
              ]
            }
          >
            <View
              flexDirection="column"
              gap={8}
              style={
                [
                  {
                    "flexDirection": "column",
                    "gap": 8,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {},
                    undefined,
                  ]
                }
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#3c4d9d0f",
                      "borderColor": "#b7bbc866",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "height": 48,
                      "maxHeight": 58,
                      "opacity": 1,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      autoCorrect={false}
                      autoFocus={false}
                      editable={true}
                      id="input"
                      multiline={false}
                      numberOfLines={1}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      placeholderTextColor="#686e7d"
                      style={
                        {
                          "backgroundColor": "inherit",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 46,
                          "letterSpacing": 0,
                          "opacity": 1,
                        }
                      }
                      testID="input-snap-ui-input"
                      value=""
                    />
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                nativeID="submit"
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": undefined,
                    }
                  }
                >
                  Submit
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIForm will render with fields 1`] = `
<View
  style={
    [
      {
        "flexGrow": 1,
        "minHeight": 667,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "flexDirection": "column",
          "flexGrow": 1,
        },
      ]
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
      testID="snap-ui-renderer__scrollview"
    >
      <View>
        <View
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            color="Default"
            flexDirection="column"
            gap={8}
            justifyContent="flex-start"
            style={
              [
                {
                  "color": "Default",
                  "flexDirection": "column",
                  "gap": 8,
                  "justifyContent": "flex-start",
                },
                {
                  "gap": 16,
                  "margin": 16,
                },
              ]
            }
          >
            <View
              flexDirection="column"
              gap={8}
              style={
                [
                  {
                    "flexDirection": "column",
                    "gap": 8,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {},
                    {
                      "flexBasis": "50%",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                  testID="label"
                >
                  My Input
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#3c4d9d0f",
                      "borderColor": "#b7bbc866",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "height": 48,
                      "maxHeight": 58,
                      "opacity": 1,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      autoCorrect={false}
                      autoFocus={false}
                      editable={true}
                      id="input"
                      multiline={false}
                      numberOfLines={1}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      placeholderTextColor="#686e7d"
                      style={
                        {
                          "backgroundColor": "inherit",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 46,
                          "letterSpacing": 0,
                          "opacity": 1,
                        }
                      }
                      testID="input-snap-ui-input"
                      value="abc"
                    />
                  </View>
                </View>
              </View>
              <View
                flexDirection="column"
                style={
                  [
                    {
                      "flexDirection": "column",
                    },
                    {
                      "flexBasis": "50%",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                  testID="label"
                >
                  My Checkbox
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                  testID="snap-ui-renderer__checkbox"
                >
                  <View
                    accessibilityRole="checkbox"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#4459ff",
                        "borderColor": "#4459ff",
                        "borderRadius": 4,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  >
                    <SvgMock
                      color="#ffffff"
                      fill="currentColor"
                      height={20}
                      name="CheckBold"
                      onPress={[Function]}
                      style={
                        {
                          "height": 20,
                          "width": 20,
                        }
                      }
                      testID="snap-ui-renderer__checkbox"
                      width={20}
                    />
                  </View>
                  <View
                    style={
                      {
                        "marginLeft": 12,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      This is a checkbox
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  [
                    {},
                    undefined,
                  ]
                }
                testID="snap-ui-renderer__radio"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                  testID="label"
                >
                  My Radio Group
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                  testID="snap-ui-renderer__radio-button"
                >
                  <View
                    accessibilityRole="radio"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#b7bbc8",
                        "borderRadius": 99,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  />
                  <View
                    style={
                      {
                        "marginLeft": 12,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      Radio 1
                    </Text>
                  </View>
                </View>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                  testID="snap-ui-renderer__radio-button"
                >
                  <View
                    accessibilityRole="radio"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#4459ff",
                        "borderRadius": 99,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "backgroundColor": "#4459ff",
                          "borderRadius": 99,
                          "height": 12,
                          "width": 12,
                        }
                      }
                      testID="RadioButton-icon-component"
                    />
                  </View>
                  <View
                    style={
                      {
                        "marginLeft": 12,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      Radio 2
                    </Text>
                  </View>
                </View>
              </View>
              <View
                flexDirection="column"
                style={
                  [
                    {
                      "flexDirection": "column",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                  testID="label"
                >
                  My Dropdown
                </Text>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "#ffffff",
                      "borderColor": "#b7bbc866",
                      "borderRadius": 8,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "height": "auto",
                      "justifyContent": "center",
                      "maxHeight": 58,
                      "minHeight": 48,
                      "opacity": 1,
                      "overflow": "hidden",
                      "paddingBottom": 8,
                      "paddingHorizontal": 16,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "paddingTop": 8,
                    }
                  }
                  testID="snap-ui-renderer__dropdown"
                >
                  <View
                    alignItems="center"
                    flexDirection="row"
                    gap={8}
                    justifyContent="space-between"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "gap": 8,
                          "justifyContent": "space-between",
                        },
                        {
                          "flex": 1,
                        },
                      ]
                    }
                    testID="snaps-ui-card"
                  >
                    <View
                      alignItems="center"
                      flexDirection="row"
                      gap={16}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 16,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        flexDirection="column"
                        style={
                          [
                            {
                              "flexDirection": "column",
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          ellipsizeMode="tail"
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                        >
                          Dropdown 2
                        </Text>
                      </View>
                    </View>
                    <View
                      flexDirection="column"
                      style={
                        [
                          {
                            "flexDirection": "column",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        accessibilityRole="text"
                        ellipsizeMode="tail"
                        style={
                          {
                            "color": "#121314",
                            "fontFamily": "Geist-Medium",
                            "fontSize": 16,
                            "letterSpacing": 0,
                            "lineHeight": 24,
                            "textAlign": "right",
                          }
                        }
                      />
                    </View>
                  </View>
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={16}
                    name="ArrowDown"
                    style={
                      {
                        "height": 16,
                        "marginLeft": 8,
                        "width": 16,
                      }
                    }
                    width={16}
                  />
                </View>
              </View>
              <View
                flexDirection="column"
                style={
                  [
                    {
                      "flexDirection": "column",
                    },
                    {
                      "flexBasis": "50%",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                  testID="label"
                >
                  My Selector
                </Text>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "#ffffff",
                      "borderColor": "#b7bbc866",
                      "borderRadius": 8,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "height": "auto",
                      "justifyContent": "center",
                      "maxHeight": 58,
                      "minHeight": 48,
                      "opacity": 1,
                      "overflow": "hidden",
                      "paddingBottom": 8,
                      "paddingHorizontal": 16,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "paddingTop": 8,
                    }
                  }
                  testID="snap-ui-renderer__selector"
                >
                  <View
                    alignItems="center"
                    flexDirection="row"
                    gap={8}
                    justifyContent="space-between"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "gap": 8,
                          "justifyContent": "space-between",
                        },
                        {
                          "flex": 1,
                        },
                      ]
                    }
                    testID="snaps-ui-card"
                  >
                    <View
                      alignItems="center"
                      flexDirection="row"
                      gap={16}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 16,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        flexDirection="column"
                        style={
                          [
                            {
                              "flexDirection": "column",
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          ellipsizeMode="tail"
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                        >
                          CardTitle2
                        </Text>
                        <Text
                          accessibilityRole="text"
                          ellipsizeMode="tail"
                          style={
                            {
                              "color": "#686e7d",
                              "fontFamily": "Geist-Regular",
                              "fontSize": 16,
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                        >
                          CardDescription2
                        </Text>
                      </View>
                    </View>
                    <View
                      flexDirection="column"
                      style={
                        [
                          {
                            "flexDirection": "column",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        accessibilityRole="text"
                        ellipsizeMode="tail"
                        style={
                          {
                            "color": "#121314",
                            "fontFamily": "Geist-Medium",
                            "fontSize": 16,
                            "letterSpacing": 0,
                            "lineHeight": 24,
                            "textAlign": "right",
                          }
                        }
                      >
                        CardValue2
                      </Text>
                      <Text
                        accessibilityRole="text"
                        ellipsizeMode="tail"
                        style={
                          {
                            "color": "#686e7d",
                            "fontFamily": "Geist-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0,
                            "lineHeight": 24,
                            "textAlign": "right",
                          }
                        }
                      >
                        CardExtra2
                      </Text>
                    </View>
                  </View>
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={16}
                    name="ArrowDown"
                    style={
                      {
                        "height": 16,
                        "marginLeft": 8,
                        "width": 16,
                      }
                    }
                    width={16}
                  />
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                nativeID="submit"
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": undefined,
                    }
                  }
                >
                  Submit
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;
